# motr

./: .gitignore  CMakeLists.txt  README.md
motr/: CMakeLists.txt
motr/include/: configuration.h  motr.h
motr/include/core/: allocator.h  stack_allocator.h  stack_memory_pool.h  version.h
motr/include/logic/: calculus.h
motr/include/util/: recursive_wrapper.h  variant.h  visitor.h
motr/src/core/: allocator.cpp  stack_memory_pool.cpp  version.cpp
tests/: CMakeLists.txt  allocator_tests.cpp  calculus.cpp  main.cpp  version_test.cpp  visitor_test.cpp
